// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Header for route / with expected name Dashboard 1`] = `

<div class="flex w-full justify-between px-8 py-3">
  <h3 class="text-xl font-medium mt-1">
    Dashboard
  </h3>
</div>

`;

exports[`renders Header for route /dashboard with expected name Dashboard 1`] = `

<div class="flex w-full justify-between px-8 py-3">
  <h3 class="text-xl font-medium mt-1">
    Dashboard
  </h3>
</div>

`;

exports[`renders Header for route /error with expected name Error 1`] = `

<div class="flex w-full justify-between px-8 py-3">
  <h3 class="text-xl font-medium mt-1">
    Error
  </h3>
</div>

`;

exports[`renders Header for route /explore with expected name Explore 1`] = `

<div class="flex w-full justify-between px-8 py-3">
  <h3 class="text-xl font-medium mt-1">
    Explore
  </h3>
</div>

`;
